[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Effects/Textures/blue_explosion.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Door/Open.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Explosion Particles.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Sounds/Door - Close.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Sounds/Door - Open.wav" type="AudioStream" id=5]
[ext_resource path="res://src/Sounds/EXPLOSION.wav" type="AudioStream" id=6]
[ext_resource path="res://src/Effects/Materials/door_explosion.tres" type="Material" id=7]
[ext_resource path="res://src/Objects/Door/door.res" type="SpriteFrames" id=8]
[ext_resource path="res://src/Objects/Door/PassThrough.gd" type="Script" id=9]
[ext_resource path="res://src/Objects/Door/Close.gd" type="Script" id=10]
[ext_resource path="res://src/Objects/Door/Explode.gd" type="Script" id=11]
[ext_resource path="res://src/Actors/Props/RideArmor/ActiveArea2D.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/NewStateMachine/debugger.gd" type="Script" id=13]
[ext_resource path="res://src/Objects/Door/NewDoor.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 29 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 9.5 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 10.5, 13 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 17.5, 24 )

[node name="Door" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 15 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
pause_mode = 2
frames = ExtResource( 8 )
animation = "closed"

[node name="Open" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 2 )
hard_conflicts = [ NodePath("../Close"), NodePath("../Explode") ]

[node name="player_detector" type="Area2D" parent="Open"]
position = Vector2( 0, 11 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 12 )
group = "Player"
exceptions = [ "Props" ]

[node name="collisionShape2D" type="CollisionShape2D" parent="Open/player_detector"]
position = Vector2( -11, -12.5 )
shape = SubResource( 1 )

[node name="open" type="AudioStreamPlayer2D" parent="Open"]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -9.226
bus = "SFX"

[node name="PassThrough" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 9 )

[node name="Close" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 10 )

[node name="close" type="AudioStreamPlayer2D" parent="Close"]
stream = ExtResource( 4 )
volume_db = -5.226
bus = "SFX"

[node name="Explode" type="Node2D" parent="."]
script = ExtResource( 11 )
hard_conflicts = [ NodePath("../Close") ]

[node name="punch_detector" type="Area2D" parent="Explode"]
visible = false
position = Vector2( 0, 11 )
collision_layer = 0
collision_mask = 4
script = ExtResource( 12 )
group = "Player Projectile"

[node name="collisionShape2D" type="CollisionShape2D" parent="Explode/punch_detector"]
position = Vector2( -13.5, -11 )
shape = SubResource( 33 )

[node name="bike_detector" type="Area2D" parent="Explode"]
visible = false
position = Vector2( 0, 11 )
collision_layer = 0
collision_mask = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="Explode/bike_detector"]
position = Vector2( -17.5, -11 )
shape = SubResource( 32 )

[node name="Explosion Particles" parent="Explode" instance=ExtResource( 3 )]
position = Vector2( 0, 0 )
z_index = 5
z_as_relative = false
process_material = ExtResource( 7 )
texture = ExtResource( 1 )

[node name="explosion_sound" type="AudioStreamPlayer2D" parent="Explode"]
stream = ExtResource( 6 )
volume_db = -10.6
pitch_scale = 1.16
max_distance = 600.0
attenuation = 0.05
bus = "SFX"

[node name="StateMachineVisual" type="Label" parent="."]
pause_mode = 2
visible = false
margin_left = -24.0
margin_top = -68.0
margin_right = 16.0
margin_bottom = -54.0
text = "hello"
script = ExtResource( 13 )

[connection signal="start" from="Open" to="." method="_on_Open_start"]
[connection signal="stop" from="Open" to="PassThrough" method="_on_signal"]
[connection signal="body_entered" from="Open/player_detector" to="Open/player_detector" method="_on_area2D_body_entered"]
[connection signal="body_exited" from="Open/player_detector" to="Open/player_detector" method="_on_area2D_body_exited"]
[connection signal="group_body_present" from="Open/player_detector" to="Open" method="_on_signal"]
[connection signal="start" from="PassThrough" to="." method="_on_PassThrough_start"]
[connection signal="stop" from="PassThrough" to="Close" method="_on_signal"]
[connection signal="start" from="Close" to="." method="_on_Close_start"]
[connection signal="stop" from="Close" to="." method="_on_Close_stop"]
[connection signal="start" from="Explode" to="." method="_on_Explode_start"]
[connection signal="body_entered" from="Explode/punch_detector" to="Explode/punch_detector" method="_on_area2D_body_entered"]
[connection signal="body_exited" from="Explode/punch_detector" to="Explode/punch_detector" method="_on_area2D_body_exited"]
[connection signal="group_body_entered" from="Explode/punch_detector" to="Explode" method="_on_punch_detector_body_entered"]
[connection signal="body_entered" from="Explode/bike_detector" to="Explode" method="_on_bike_detector_body_entered"]
